<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/colorAccent"
                android:linksClickable="true"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:text="@string/s4_0"
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimaryDark"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="Unduh"
                android:textStyle="bold"
                android:textColor="@color/colorAccent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimaryDark"
                android:linksClickable="true"
                android:autoLink="web"
                android:text="@string/s4_1"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimaryDark"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/share"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimaryDark"
                android:linksClickable="true"
                android:autoLink="web"
                android:text="@string/s4_2"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimaryDark"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/rate"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimaryDark"
                android:linksClickable="true"
                android:autoLink="web"
                android:text="@string/s4_3"
                android:gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimaryDark"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/more"
                android:textColor="@color/colorAccent" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>