<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/colorAccent"
                android:linksClickable="true"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:text="@string/s2_0"
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimaryDark"
                android:linksClickable="true"
                android:autoLink="web"
                android:text="@string/s2_1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="320dp"
                android:src="@drawable/s_0"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimaryDark"
                android:linksClickable="true"
                android:autoLink="web"
                android:text="@string/s2_2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="320dp"
                android:src="@drawable/s_2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimaryDark"
                android:linksClickable="true"
                android:autoLink="web"
                android:text="@string/s2_3"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="320dp"
                android:src="@drawable/s_3"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="320dp"
                android:src="@drawable/s_4"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimaryDark"
                android:linksClickable="true"
                android:autoLink="web"
                android:text="@string/s2_4"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="320dp"
                android:src="@drawable/s_5"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimaryDark"
                android:linksClickable="true"
                android:autoLink="web"
                android:text="@string/s2_5"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>